--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "node-sass": "^7.0.1",
     "postcss": "^8.4.12",
     "postcss-loader": "^6.2.1",
-    "prettier": "^2.6.2",
+    "prettier": "2.7.1",
     "sass-loader": "^12.6.0",
     "tailwindcss": "^3.0.23",
     "url-loader": "^4.1.1",
